Fix tabStripTabsPane is overlapping bottom margin (RM-2132)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@16240 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/ClassicBlue/HTML/TabStrip.css
+++ b/Remotion/Web/Core/Res/Themes/ClassicBlue/HTML/TabStrip.css
@@ -20,13 +20,6 @@
   width: 100%; 
 }
 
-/* HACK: Webkit-based browsers (Chrome, Safari) won't apply this, IE and Firefox will */
-*.tabStripTabsPane ul
-{
-  margin-bottom: -1px;
-}
-
-
 *.tabStripTabsPane ul li
 {
    display: inline;
